tdf#142459 Fixed long class names are truncated(gen)

Change-Id: I9c88beb3fc83c23b2e866824985d50567b056f7f